package GYGCToCS;

enum MsgID
{
	eMsgToGSToCSFromGC_Begin = 8191;
	eMsgToGSToCSFromGC_AskLogin = 8193;			// 请求登录
	eMsgToGSToCSFromGC_AskReconnectGame = 8194; // 断线重连
	eMsgToGSToCSFromGC_SelectRole = 8195;		// 选择角色进入场景 
	eMsgToGSToCSFromGC_AskCreateDungeon = 8196;	// 请求创建副本
	eMsgToGSToCSFromGC_AskEnterDungeon = 8197;// 请求副本内容对象
	eMsgToGSToCSFromGC_QuitGame = 8999;			// 退出游戏，临时
	

	//结束符
	eMsgToGSToCSFromGC_End = 9000;
}

message AskLogin
{
	optional MsgID msgid = 1 [default = eMsgToGSToCSFromGC_AskLogin];
	optional int32 sdk = 2;
	optional int32 platform = 3;
	optional string name = 4;
	optional string passwd = 5; 
	optional string ipaddress = 6; 
	optional string equimentid = 7; 
}

message SelectRole
{
	optional MsgID msgid = 1 [default = eMsgToGSToCSFromGC_SelectRole]; 
	optional string player_guid = 2;		// 选择的角色GUID
}

message AskCreateDungeon
{
	optional MsgID msgid = 1 [default = eMsgToGSToCSFromGC_AskCreateDungeon];
	optional int32 dungeonId = 2;			// 副本ID，对应副本表
}

message QuitGame
{
	optional MsgID msgid = 1 [default = eMsgToGSToCSFromGC_QuitGame];
}

message AskDungeonObjects
{
	optional MsgID msgid = 1 [default = eMsgToGSToCSFromGC_AskEnterDungeon];
}